crates/codegen/tests/snapshots/snapshots__ecommerce__postgres__enums.snap
---
source: crates/codegen/tests/snapshots.rs
expression: content
---
#![allow(clippy::all, clippy::pedantic, unused_imports)]
use ::ruprizzle::serde::{Deserialize, Serialize};
use ::ruprizzle::sqlx::Type;
use ::ruprizzle::Value;
///Where an order is in its lifecycle.
#[derive(Debug, Clone, Copy, PartialEq, Eq, Hash, Type, Serialize, Deserialize)]
#[sqlx(type_name = "order_status", rename_all = "SCREAMING_SNAKE_CASE")]
#[serde(crate = "::ruprizzle::serde")]
pub enum OrderStatus {
    Pending,
    Paid,
    Shipped,
    Cancelled,
}
impl OrderStatus {
    /// All variants in declaration order.
    pub const ALL: &'static [OrderStatus] = &[
        OrderStatus::Pending,
        OrderStatus::Paid,
        OrderStatus::Shipped,
        OrderStatus::Cancelled,
    ];
    /// The database string for this variant.
    #[must_use]
    pub const fn as_db_str(&self) -> &'static str {
        match self {
            Self::Pending => "PENDING",
            Self::Paid => "PAID",
            Self::Shipped => "SHIPPED",
            Self::Cancelled => "CANCELLED",
        }
    }
    /// Parse a database string into a variant.
    #[must_use]
    pub fn from_db_str(s: &str) -> Option<Self> {
        match s {
            "PENDING" => Some(Self::Pending),
            "PAID" => Some(Self::Paid),
            "SHIPPED" => Some(Self::Shipped),
            "CANCELLED" => Some(Self::Cancelled),
            _ => None,
        }
    }
}
impl std::fmt::Display for OrderStatus {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        f.write_str(self.as_db_str())
    }
}
impl std::str::FromStr for OrderStatus {
    type Err = String;
    fn from_str(s: &str) -> Result<Self, Self::Err> {
        Self::from_db_str(s)
            .ok_or_else(|| format!("unknown {0}: {1}", stringify!(OrderStatus), s))
    }
}
impl ::ruprizzle::Encodable for OrderStatus {
    fn to_value(&self) -> Value {
        Value::Str(self.as_db_str().into())
    }
}
