crates/codegen/tests/snapshots/snapshots__ecommerce__postgres__mod.snap
---
source: crates/codegen/tests/snapshots.rs
expression: content
---
#![allow(clippy::all, clippy::pedantic, unused_imports)]
pub mod _generated;
pub mod enums;
pub mod customer;
pub mod product;
pub mod order;
pub mod order_item;
pub use _generated::{RUPRIZZLE_VERSION, SCHEMA_HASH};
pub use self::customer::{CustomerInsert, Customer, CustomerRepo, CustomerUpdate};
pub use self::product::{ProductInsert, Product, ProductRepo, ProductUpdate};
pub use self::order::{OrderInsert, Order, OrderRepo, OrderUpdate};
pub use self::order_item::{OrderItemInsert, OrderItem, OrderItemRepo, OrderItemUpdate};
/// The generated `Db` client root.
#[derive(Debug, Clone)]
pub struct Db {
    pool: ::ruprizzle::Pool,
}
impl Db {
    /// Connect to a database by URL.
    ///
    /// # Errors
    ///
    /// Returns an error if the URL cannot be parsed or the connection fails.
    pub async fn connect(url: &str) -> Result<Self, ::ruprizzle::Error> {
        let pool = ::ruprizzle::Pool::connect(url).await?;
        Ok(Self { pool })
    }
    /// Wrap an existing pool.
    pub fn from_pool(pool: ::ruprizzle::Pool) -> Self {
        Self { pool }
    }
    /// Return the raw `sqlx` pool.
    pub fn raw_pool(&self) -> &::ruprizzle::Pool {
        &self.pool
    }
    /// Entry point for this model's repository.
    pub fn customer(&self) -> CustomerRepo<'_> {
        CustomerRepo::new(self)
    }
    /// Entry point for this model's repository.
    pub fn product(&self) -> ProductRepo<'_> {
        ProductRepo::new(self)
    }
    /// Entry point for this model's repository.
    pub fn order(&self) -> OrderRepo<'_> {
        OrderRepo::new(self)
    }
    /// Entry point for this model's repository.
    pub fn order_item(&self) -> OrderItemRepo<'_> {
        OrderItemRepo::new(self)
    }
    /// Drizzle-flavoured `SELECT` entry point.
    pub fn select<M: ::ruprizzle::Model>(&self) -> ::ruprizzle::SelectQuery<'_, M> {
        ::ruprizzle::SelectQuery::new(self.raw_pool())
    }
    /// Drizzle-flavoured `INSERT` entry point.
    pub fn insert<M: ::ruprizzle::Model>(&self) -> ::ruprizzle::InsertQuery<'_, M> {
        ::ruprizzle::InsertQuery::new(self.raw_pool())
    }
    /// Run a closure inside a transaction.
    ///
    /// The closure receives a `&mut ::ruprizzle::Tx` and can execute raw
    /// SQL through it. The transaction is committed if the closure returns
    /// `Ok`, and rolled back if it returns `Err`.
    pub async fn transaction<F, T>(&self, f: F) -> Result<T, ::ruprizzle::Error>
    where
        F: for<'t> FnOnce(
            &'t mut ::ruprizzle::Tx,
        ) -> ::ruprizzle::BoxFuture<'t, Result<T, ::ruprizzle::Error>>,
    {
        let mut tx = ::ruprizzle::Tx::begin(self.raw_pool()).await?;
        match f(&mut tx).await {
            Ok(v) => {
                tx.commit().await?;
                Ok(v)
            }
            Err(e) => {
                tx.rollback().await?;
                Err(e)
            }
        }
    }
    /// Run a closure inside a transaction with an explicit isolation level.
    pub async fn transaction_with<F, T>(
        &self,
        level: ::ruprizzle::IsolationLevel,
        f: F,
    ) -> Result<T, ::ruprizzle::Error>
    where
        F: for<'t> FnOnce(
            &'t mut ::ruprizzle::Tx,
        ) -> ::ruprizzle::BoxFuture<'t, Result<T, ::ruprizzle::Error>>,
    {
        let mut tx = ::ruprizzle::Tx::begin_with_isolation(self.raw_pool(), level)
            .await?;
        match f(&mut tx).await {
            Ok(v) => {
                tx.commit().await?;
                Ok(v)
            }
            Err(e) => {
                tx.rollback().await?;
                Err(e)
            }
        }
    }
    /// Run a transaction, retrying transient serialization failures.
    ///
    /// Retries only errors [`ruprizzle::is_retryable`] recognises —
    /// Postgres `40001`/`40P01` and SQLite lock contention. A genuine
    /// constraint violation is returned immediately rather than
    /// retried, because retrying it only repeats the work before
    /// failing the same way. `attempts` counts total tries, so
    /// `attempts = 1` disables retrying.
    ///
    /// The closure is `FnMut` because it runs once per attempt.
    pub async fn transaction_retrying<F, T>(
        &self,
        attempts: u32,
        mut f: F,
    ) -> Result<T, ::ruprizzle::Error>
    where
        F: for<'t> FnMut(
            &'t mut ::ruprizzle::Tx,
        ) -> ::ruprizzle::BoxFuture<'t, Result<T, ::ruprizzle::Error>>,
    {
        let mut attempt = 0;
        loop {
            attempt += 1;
            let mut tx = ::ruprizzle::Tx::begin(self.raw_pool()).await?;
            let result = f(&mut tx).await;
            match result {
                Ok(v) => {
                    match tx.commit().await {
                        Ok(()) => return Ok(v),
                        Err(e) => {
                            if attempt >= attempts.max(1)
                                || !::ruprizzle::is_retryable(&e)
                            {
                                return Err(e);
                            }
                        }
                    }
                }
                Err(e) => {
                    tx.rollback().await?;
                    if attempt >= attempts.max(1) || !::ruprizzle::is_retryable(&e) {
                        return Err(e);
                    }
                }
            }
        }
    }
}
/// Common imports for this generated module.
pub mod prelude {
    pub use super::{
        Db, RUPRIZZLE_VERSION, SCHEMA_HASH, Customer, CustomerInsert, CustomerUpdate,
        CustomerRepo, customer, Product, ProductInsert, ProductUpdate, ProductRepo,
        product, Order, OrderInsert, OrderUpdate, OrderRepo, order, OrderItem,
        OrderItemInsert, OrderItemUpdate, OrderItemRepo, order_item,
    };
    pub use ::ruprizzle::prelude::*;
}
