crates/codegen/tests/snapshots/snapshots__ecommerce__postgres__order.snap
---
source: crates/codegen/tests/snapshots.rs
expression: content
---
#![allow(clippy::all, clippy::pedantic, unused_imports)]
use ::ruprizzle::serde::{Deserialize, Serialize};
use ::ruprizzle::sqlx::any::AnyRow;
use ::ruprizzle::types::chrono::{DateTime, NaiveDate, NaiveTime, Utc};
use ::ruprizzle::types::{Decimal, Uuid};
use ::ruprizzle::serde_json::Value as JsonValue;
use ::ruprizzle::Related;
use ::ruprizzle::Column;
#[derive(Debug, Clone, PartialEq, Serialize, Deserialize)]
#[serde(crate = "::ruprizzle::serde")]
pub struct Order {
    pub id: Uuid,
    pub status: super::enums::OrderStatus,
    pub customer_id: Uuid,
    #[serde(skip_serializing_if = "::ruprizzle::Related::is_absent", default)]
    pub customer: ::ruprizzle::Related<Option<super::customer::Customer>>,
    #[serde(skip_serializing_if = "::ruprizzle::Related::is_absent", default)]
    pub items: ::ruprizzle::Related<Vec<super::order_item::OrderItem>>,
    pub placed_at: DateTime<Utc>,
}
impl<'r> ::ruprizzle::sqlx::FromRow<'r, AnyRow> for Order {
    fn from_row(row: &'r AnyRow) -> Result<Self, ::ruprizzle::sqlx::Error> {
        Ok(Self {
            id: ::ruprizzle::decode::text_idx(row, 0)?,
            status: ::ruprizzle::decode::text_idx(row, 1)?,
            customer_id: ::ruprizzle::decode::text_idx(row, 2)?,
            customer: ::ruprizzle::Related::default(),
            items: ::ruprizzle::Related::default(),
            placed_at: ::ruprizzle::decode::text_idx(row, 3)?,
        })
    }
}
impl<'r> ::ruprizzle::sqlx::FromRow<'r, ::ruprizzle::sqlx::postgres::PgRow> for Order {
    fn from_row(
        row: &'r ::ruprizzle::sqlx::postgres::PgRow,
    ) -> Result<Self, ::ruprizzle::sqlx::Error> {
        Ok(Self {
            id: ::ruprizzle::decode::text_idx(row, 0)?,
            status: ::ruprizzle::decode::text_idx(row, 1)?,
            customer_id: ::ruprizzle::decode::text_idx(row, 2)?,
            customer: ::ruprizzle::Related::default(),
            items: ::ruprizzle::Related::default(),
            placed_at: ::ruprizzle::decode::text_idx(row, 3)?,
        })
    }
}
impl<'r> ::ruprizzle::sqlx::FromRow<'r, ::ruprizzle::sqlx::sqlite::SqliteRow> for Order {
    fn from_row(
        row: &'r ::ruprizzle::sqlx::sqlite::SqliteRow,
    ) -> Result<Self, ::ruprizzle::sqlx::Error> {
        Ok(Self {
            id: ::ruprizzle::decode::text_idx(row, 0)?,
            status: ::ruprizzle::decode::text_idx(row, 1)?,
            customer_id: ::ruprizzle::decode::text_idx(row, 2)?,
            customer: ::ruprizzle::Related::default(),
            items: ::ruprizzle::Related::default(),
            placed_at: ::ruprizzle::decode::text_idx(row, 3)?,
        })
    }
}
/// Insert shape: required fields are required, defaulted/optional fields
/// are `Option` so the database can fill them in.
#[derive(Debug, Clone, Serialize, Deserialize)]
#[serde(crate = "::ruprizzle::serde")]
pub struct OrderInsert {
    #[serde(default, skip_serializing_if = "Option::is_none")]
    pub id: Option<Uuid>,
    #[serde(default, skip_serializing_if = "Option::is_none")]
    pub status: Option<super::enums::OrderStatus>,
    pub customer_id: Uuid,
    #[serde(default, skip_serializing_if = "Option::is_none")]
    pub placed_at: Option<DateTime<Utc>>,
}
/// Update shape: every field is `Option` to support explicit nulls.
#[derive(Debug, Clone, Default, Serialize, Deserialize)]
#[serde(crate = "::ruprizzle::serde")]
pub struct OrderUpdate {
    #[serde(default, skip_serializing_if = "Option::is_none")]
    pub id: Option<Uuid>,
    #[serde(default, skip_serializing_if = "Option::is_none")]
    pub status: Option<super::enums::OrderStatus>,
    #[serde(default, skip_serializing_if = "Option::is_none")]
    pub customer_id: Option<Uuid>,
    #[serde(default, skip_serializing_if = "Option::is_none")]
    pub placed_at: Option<DateTime<Utc>>,
}
impl ::ruprizzle::Model for Order {
    const TABLE: &'static str = "orders";
    const PRIMARY_KEY: &'static str = "id";
    const COLUMNS: &'static [&'static str] = &[
        "id",
        "status",
        "customer_id",
        "placed_at",
    ];
}
/// Table name for this model.
pub const TABLE: &str = "orders";
pub const ID: Column<Order, Uuid> = Column::new("orders", "id");
pub const STATUS: Column<Order, super::enums::OrderStatus> = Column::new(
    "orders",
    "status",
);
pub const CUSTOMER_ID: Column<Order, Uuid> = Column::new("orders", "customer_id");
pub const PLACED_AT: Column<Order, DateTime<Utc>> = Column::new("orders", "placed_at");
/// Returns an `IncludeOne` for this relation.
pub fn customer() -> ::ruprizzle::IncludeOne<
    'static,
    Order,
    super::customer::Customer,
    Uuid,
    (),
> {
    ::ruprizzle::IncludeOne::new(
        |__row| __row.customer_id,
        |__row, __loaded| __row.customer = __loaded,
        super::customer::ID,
        |__child| __child.id,
    )
}
/// Returns an `IncludeList` for this relation.
pub fn items() -> ::ruprizzle::IncludeList<
    'static,
    Order,
    super::order_item::OrderItem,
    Uuid,
    (),
> {
    ::ruprizzle::IncludeList::new(
        |__row| __row.id,
        |__row, __loaded| __row.items = __loaded,
        super::order_item::ORDER_ID,
        |__child| __child.order_id,
    )
}
/// Returns a filter for parents that have at least one matching child.
pub fn customer_some(
    f: ::ruprizzle::Filter<super::customer::Customer>,
) -> ::ruprizzle::Filter<Order> {
    ::ruprizzle::Filter::new(::ruprizzle::FilterNode::Exists {
        child_table: "customers",
        child_col: "id",
        parent_table: "orders",
        parent_col: "customer_id",
        filter: Box::new(f.node),
        negated: false,
    })
}
/// Returns a filter for parents that have no matching child.
pub fn customer_none(
    f: ::ruprizzle::Filter<super::customer::Customer>,
) -> ::ruprizzle::Filter<Order> {
    ::ruprizzle::Filter::new(::ruprizzle::FilterNode::Exists {
        child_table: "customers",
        child_col: "id",
        parent_table: "orders",
        parent_col: "customer_id",
        filter: Box::new(f.node),
        negated: true,
    })
}
/// Returns a filter for parents where every matching child satisfies `f`.
/// Vacuously true for parents with no children.
pub fn customer_every(
    f: ::ruprizzle::Filter<super::customer::Customer>,
) -> ::ruprizzle::Filter<Order> {
    ::ruprizzle::Filter::new(::ruprizzle::FilterNode::Exists {
        child_table: "customers",
        child_col: "id",
        parent_table: "orders",
        parent_col: "customer_id",
        filter: Box::new((!f).node),
        negated: true,
    })
}
/// Returns a filter for parents that have at least one matching child.
pub fn items_some(
    f: ::ruprizzle::Filter<super::order_item::OrderItem>,
) -> ::ruprizzle::Filter<Order> {
    ::ruprizzle::Filter::new(::ruprizzle::FilterNode::Exists {
        child_table: "order_items",
        child_col: "order_id",
        parent_table: "orders",
        parent_col: "id",
        filter: Box::new(f.node),
        negated: false,
    })
}
/// Returns a filter for parents that have no matching child.
pub fn items_none(
    f: ::ruprizzle::Filter<super::order_item::OrderItem>,
) -> ::ruprizzle::Filter<Order> {
    ::ruprizzle::Filter::new(::ruprizzle::FilterNode::Exists {
        child_table: "order_items",
        child_col: "order_id",
        parent_table: "orders",
        parent_col: "id",
        filter: Box::new(f.node),
        negated: true,
    })
}
/// Returns a filter for parents where every matching child satisfies `f`.
/// Vacuously true for parents with no children.
pub fn items_every(
    f: ::ruprizzle::Filter<super::order_item::OrderItem>,
) -> ::ruprizzle::Filter<Order> {
    ::ruprizzle::Filter::new(::ruprizzle::FilterNode::Exists {
        child_table: "order_items",
        child_col: "order_id",
        parent_table: "orders",
        parent_col: "id",
        filter: Box::new((!f).node),
        negated: true,
    })
}
/// Prisma-flavoured repository for `#model_name`.
#[derive(Debug, Clone, Copy)]
pub struct OrderRepo<'a> {
    db: &'a super::Db,
}
impl<'a> OrderRepo<'a> {
    /// Creates a new repository handle.
    pub(crate) fn new(db: &'a super::Db) -> Self {
        Self { db }
    }
    /// Start a `find_many` query.
    pub fn find_many(&self) -> ::ruprizzle::SelectQuery<'a, Order> {
        ::ruprizzle::SelectQuery::new(self.db.raw_pool())
    }
    /// Start an `insert` query.
    pub fn create(&self, _data: OrderInsert) -> ::ruprizzle::InsertQuery<'a, Order> {
        let mut insert = ::ruprizzle::InsertQuery::new(self.db.raw_pool());
        insert = insert.set_optional(ID, _data.id);
        insert = insert.set_optional(STATUS, _data.status);
        insert = insert.set(CUSTOMER_ID, _data.customer_id);
        insert = insert.set_optional(PLACED_AT, _data.placed_at);
        insert
    }
    /// Start a multi-row `insert` query.
    pub fn create_many(
        &self,
        _data: Vec<OrderInsert>,
    ) -> ::ruprizzle::InsertManyQuery<'a, Order> {
        let mut q = ::ruprizzle::InsertManyQuery::new(self.db.raw_pool());
        for _row in _data {
            q = q
                .row([
                    ("id", ::ruprizzle::Encodable::to_value(&_row.id)),
                    ("status", ::ruprizzle::Encodable::to_value(&_row.status)),
                    ("customer_id", ::ruprizzle::Encodable::to_value(&_row.customer_id)),
                    ("placed_at", ::ruprizzle::Encodable::to_value(&_row.placed_at)),
                ]);
        }
        q
    }
    /// Start an `update` query.
    pub fn update(&self) -> ::ruprizzle::UpdateQuery<'a, Order> {
        ::ruprizzle::UpdateQuery::new(self.db.raw_pool())
    }
    /// Start a `delete` query.
    pub fn delete(&self) -> ::ruprizzle::DeleteQuery<'a, Order> {
        ::ruprizzle::DeleteQuery::new(self.db.raw_pool())
    }
}
