crates/codegen/tests/snapshots/snapshots__ecommerce__postgres__order_item.snap
---
source: crates/codegen/tests/snapshots.rs
expression: content
---
#![allow(clippy::all, clippy::pedantic, unused_imports)]
use ::ruprizzle::serde::{Deserialize, Serialize};
use ::ruprizzle::sqlx::any::AnyRow;
use ::ruprizzle::types::chrono::{DateTime, NaiveDate, NaiveTime, Utc};
use ::ruprizzle::types::{Decimal, Uuid};
use ::ruprizzle::serde_json::Value as JsonValue;
use ::ruprizzle::Related;
use ::ruprizzle::Column;
///One line of an order.
#[derive(Debug, Clone, PartialEq, Serialize, Deserialize)]
#[serde(crate = "::ruprizzle::serde")]
pub struct OrderItem {
    pub order_id: Uuid,
    #[serde(skip_serializing_if = "::ruprizzle::Related::is_absent", default)]
    pub order: ::ruprizzle::Related<Option<super::order::Order>>,
    pub product_id: Uuid,
    #[serde(skip_serializing_if = "::ruprizzle::Related::is_absent", default)]
    pub product: ::ruprizzle::Related<Option<super::product::Product>>,
    pub quantity: i32,
    ///Copied at purchase time: the product price may change afterwards.
    pub unit_price: Decimal,
}
impl<'r> ::ruprizzle::sqlx::FromRow<'r, AnyRow> for OrderItem {
    fn from_row(row: &'r AnyRow) -> Result<Self, ::ruprizzle::sqlx::Error> {
        Ok(Self {
            order_id: ::ruprizzle::decode::text_idx(row, 0)?,
            order: ::ruprizzle::Related::default(),
            product_id: ::ruprizzle::decode::text_idx(row, 1)?,
            product: ::ruprizzle::Related::default(),
            quantity: ::ruprizzle::decode::direct_idx(row, 2)?,
            unit_price: ::ruprizzle::decode::text_idx(row, 3)?,
        })
    }
}
impl<'r> ::ruprizzle::sqlx::FromRow<'r, ::ruprizzle::sqlx::postgres::PgRow>
for OrderItem {
    fn from_row(
        row: &'r ::ruprizzle::sqlx::postgres::PgRow,
    ) -> Result<Self, ::ruprizzle::sqlx::Error> {
        Ok(Self {
            order_id: ::ruprizzle::decode::text_idx(row, 0)?,
            order: ::ruprizzle::Related::default(),
            product_id: ::ruprizzle::decode::text_idx(row, 1)?,
            product: ::ruprizzle::Related::default(),
            quantity: ::ruprizzle::decode::direct_idx(row, 2)?,
            unit_price: ::ruprizzle::decode::text_idx(row, 3)?,
        })
    }
}
impl<'r> ::ruprizzle::sqlx::FromRow<'r, ::ruprizzle::sqlx::sqlite::SqliteRow>
for OrderItem {
    fn from_row(
        row: &'r ::ruprizzle::sqlx::sqlite::SqliteRow,
    ) -> Result<Self, ::ruprizzle::sqlx::Error> {
        Ok(Self {
            order_id: ::ruprizzle::decode::text_idx(row, 0)?,
            order: ::ruprizzle::Related::default(),
            product_id: ::ruprizzle::decode::text_idx(row, 1)?,
            product: ::ruprizzle::Related::default(),
            quantity: ::ruprizzle::decode::direct_idx(row, 2)?,
            unit_price: ::ruprizzle::decode::text_idx(row, 3)?,
        })
    }
}
/// Insert shape: required fields are required, defaulted/optional fields
/// are `Option` so the database can fill them in.
#[derive(Debug, Clone, Serialize, Deserialize)]
#[serde(crate = "::ruprizzle::serde")]
pub struct OrderItemInsert {
    pub order_id: Uuid,
    pub product_id: Uuid,
    #[serde(default, skip_serializing_if = "Option::is_none")]
    pub quantity: Option<i32>,
    pub unit_price: Decimal,
}
/// Update shape: every field is `Option` to support explicit nulls.
#[derive(Debug, Clone, Default, Serialize, Deserialize)]
#[serde(crate = "::ruprizzle::serde")]
pub struct OrderItemUpdate {
    #[serde(default, skip_serializing_if = "Option::is_none")]
    pub order_id: Option<Uuid>,
    #[serde(default, skip_serializing_if = "Option::is_none")]
    pub product_id: Option<Uuid>,
    #[serde(default, skip_serializing_if = "Option::is_none")]
    pub quantity: Option<i32>,
    #[serde(default, skip_serializing_if = "Option::is_none")]
    pub unit_price: Option<Decimal>,
}
impl ::ruprizzle::Model for OrderItem {
    const TABLE: &'static str = "order_items";
    const PRIMARY_KEY: &'static str = "order_id";
    const COLUMNS: &'static [&'static str] = &[
        "order_id",
        "product_id",
        "quantity",
        "unit_price",
    ];
}
/// Table name for this model.
pub const TABLE: &str = "order_items";
pub const ORDER_ID: Column<OrderItem, Uuid> = Column::new("order_items", "order_id");
pub const PRODUCT_ID: Column<OrderItem, Uuid> = Column::new("order_items", "product_id");
pub const QUANTITY: Column<OrderItem, i32> = Column::new("order_items", "quantity");
pub const UNIT_PRICE: Column<OrderItem, Decimal> = Column::new(
    "order_items",
    "unit_price",
);
/// Returns an `IncludeOne` for this relation.
pub fn order() -> ::ruprizzle::IncludeOne<
    'static,
    OrderItem,
    super::order::Order,
    Uuid,
    (),
> {
    ::ruprizzle::IncludeOne::new(
        |__row| __row.order_id,
        |__row, __loaded| __row.order = __loaded,
        super::order::ID,
        |__child| __child.id,
    )
}
/// Returns an `IncludeOne` for this relation.
pub fn product() -> ::ruprizzle::IncludeOne<
    'static,
    OrderItem,
    super::product::Product,
    Uuid,
    (),
> {
    ::ruprizzle::IncludeOne::new(
        |__row| __row.product_id,
        |__row, __loaded| __row.product = __loaded,
        super::product::ID,
        |__child| __child.id,
    )
}
/// Returns a filter for parents that have at least one matching child.
pub fn order_some(
    f: ::ruprizzle::Filter<super::order::Order>,
) -> ::ruprizzle::Filter<OrderItem> {
    ::ruprizzle::Filter::new(::ruprizzle::FilterNode::Exists {
        child_table: "orders",
        child_col: "id",
        parent_table: "order_items",
        parent_col: "order_id",
        filter: Box::new(f.node),
        negated: false,
    })
}
/// Returns a filter for parents that have no matching child.
pub fn order_none(
    f: ::ruprizzle::Filter<super::order::Order>,
) -> ::ruprizzle::Filter<OrderItem> {
    ::ruprizzle::Filter::new(::ruprizzle::FilterNode::Exists {
        child_table: "orders",
        child_col: "id",
        parent_table: "order_items",
        parent_col: "order_id",
        filter: Box::new(f.node),
        negated: true,
    })
}
/// Returns a filter for parents where every matching child satisfies `f`.
/// Vacuously true for parents with no children.
pub fn order_every(
    f: ::ruprizzle::Filter<super::order::Order>,
) -> ::ruprizzle::Filter<OrderItem> {
    ::ruprizzle::Filter::new(::ruprizzle::FilterNode::Exists {
        child_table: "orders",
        child_col: "id",
        parent_table: "order_items",
        parent_col: "order_id",
        filter: Box::new((!f).node),
        negated: true,
    })
}
/// Returns a filter for parents that have at least one matching child.
pub fn product_some(
    f: ::ruprizzle::Filter<super::product::Product>,
) -> ::ruprizzle::Filter<OrderItem> {
    ::ruprizzle::Filter::new(::ruprizzle::FilterNode::Exists {
        child_table: "products",
        child_col: "id",
        parent_table: "order_items",
        parent_col: "product_id",
        filter: Box::new(f.node),
        negated: false,
    })
}
/// Returns a filter for parents that have no matching child.
pub fn product_none(
    f: ::ruprizzle::Filter<super::product::Product>,
) -> ::ruprizzle::Filter<OrderItem> {
    ::ruprizzle::Filter::new(::ruprizzle::FilterNode::Exists {
        child_table: "products",
        child_col: "id",
        parent_table: "order_items",
        parent_col: "product_id",
        filter: Box::new(f.node),
        negated: true,
    })
}
/// Returns a filter for parents where every matching child satisfies `f`.
/// Vacuously true for parents with no children.
pub fn product_every(
    f: ::ruprizzle::Filter<super::product::Product>,
) -> ::ruprizzle::Filter<OrderItem> {
    ::ruprizzle::Filter::new(::ruprizzle::FilterNode::Exists {
        child_table: "products",
        child_col: "id",
        parent_table: "order_items",
        parent_col: "product_id",
        filter: Box::new((!f).node),
        negated: true,
    })
}
/// Prisma-flavoured repository for `#model_name`.
#[derive(Debug, Clone, Copy)]
pub struct OrderItemRepo<'a> {
    db: &'a super::Db,
}
impl<'a> OrderItemRepo<'a> {
    /// Creates a new repository handle.
    pub(crate) fn new(db: &'a super::Db) -> Self {
        Self { db }
    }
    /// Start a `find_many` query.
    pub fn find_many(&self) -> ::ruprizzle::SelectQuery<'a, OrderItem> {
        ::ruprizzle::SelectQuery::new(self.db.raw_pool())
    }
    /// Start an `insert` query.
    pub fn create(
        &self,
        _data: OrderItemInsert,
    ) -> ::ruprizzle::InsertQuery<'a, OrderItem> {
        let mut insert = ::ruprizzle::InsertQuery::new(self.db.raw_pool());
        insert = insert.set(ORDER_ID, _data.order_id);
        insert = insert.set(PRODUCT_ID, _data.product_id);
        insert = insert.set_optional(QUANTITY, _data.quantity);
        insert = insert.set(UNIT_PRICE, _data.unit_price);
        insert
    }
    /// Start a multi-row `insert` query.
    pub fn create_many(
        &self,
        _data: Vec<OrderItemInsert>,
    ) -> ::ruprizzle::InsertManyQuery<'a, OrderItem> {
        let mut q = ::ruprizzle::InsertManyQuery::new(self.db.raw_pool());
        for _row in _data {
            q = q
                .row([
                    ("order_id", ::ruprizzle::Encodable::to_value(&_row.order_id)),
                    ("product_id", ::ruprizzle::Encodable::to_value(&_row.product_id)),
                    ("quantity", ::ruprizzle::Encodable::to_value(&_row.quantity)),
                    ("unit_price", ::ruprizzle::Encodable::to_value(&_row.unit_price)),
                ]);
        }
        q
    }
    /// Start an `update` query.
    pub fn update(&self) -> ::ruprizzle::UpdateQuery<'a, OrderItem> {
        ::ruprizzle::UpdateQuery::new(self.db.raw_pool())
    }
    /// Start a `delete` query.
    pub fn delete(&self) -> ::ruprizzle::DeleteQuery<'a, OrderItem> {
        ::ruprizzle::DeleteQuery::new(self.db.raw_pool())
    }
}
